# ai-driven-webapp

./: .dockerignore  .env.example  README.md  docker-compose.yml
backend/: .env  Cargo.toml
backend/migration/: Cargo.toml
backend/migration/src/: lib.rs  m20250101_000001_create_users_table.rs  m20250101_000002_create_refresh_tokens_table.rs
backend/sql/: README.md
backend/sql/ddl/: 001_create_users_table.sql  002_create_refresh_tokens_table.sql  003_create_audit_logs_table.sql
backend/sql/master_data/: 001_insert_initial_users.sql  README.md
backend/sql/transaction_data/: 001_insert_test_users.sql  README.md
backend/src/: config.rs  main.rs
backend/src/config/: db.rs  mod.rs
backend/src/entities/: audit_logs.rs  mod.rs  refresh_tokens.rs  users.rs
backend/src/features/: mod.rs
backend/src/features/audit/: domain.rs  infra.rs  middleware.rs  mod.rs  repository.rs  service.rs
backend/src/features/auth/: DESIGN.md  domain.rs  handler.rs  infra.rs  mod.rs  repository.rs  service.rs
backend/src/features/health/: DESIGN.md  handler.rs  mod.rs
backend/src/shared/: error.rs  mod.rs  response.rs
docker/backend/: Dockerfile
docker/frontend/: Dockerfile
docker/postgres/: init.sql
docs/: AUDIT_LOG_TESTING.md  DEPENDENCY_MANAGEMENT.md  DESIGN.md
frontend/: package.json  vitest.config.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/lib/api/: auth.ts  client.ts
frontend/src/lib/store/: auth.ts
frontend/src/types/: index.ts
scripts/windows/: README.md  clean.bat  gen-password-hash.bat  logs.bat  migrate-all.bat  migrate-ddl.bat  migrate-master.bat  migrate-transaction.bat  migrate.bat  rebuild.bat  restart.bat  start.bat  status.bat  stop.bat
