[package]
name = "ai-webapp-backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gen-password-hash"
path = "src/bin/gen_password_hash.rs"

[dependencies]
# Web Framework
actix-web = "4.4"
actix-cors = "0.7"

# Async Runtime
tokio = { version = "1.35", features = ["full"] }

# Database
sea-orm = { version = "0.12", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros"] }
sea-orm-migration = "0.12"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Authentication
jsonwebtoken = "9.2"
bcrypt = "0.15"

# Validation
validator = { version = "0.16", features = ["derive"] }

# Environment Variables
dotenv = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-actix-web = "0.7"

# Error Handling
thiserror = "1.0"
anyhow = "1.0"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

# Crypto
sha2 = "0.10"

# Async Trait
async-trait = "0.1"

[dev-dependencies]
# Testing
actix-rt = "2.9"
mockall = "0.12"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
