[package]
name = "ai-webapp-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web Framework
actix-web = "4"
actix-cors = "0.7"

# Async Runtime
tokio = { version = "1", features = ["full"] }

# Database
sea-orm = { version = "1", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Authentication
jsonwebtoken = "9"
bcrypt = "0.15"

# Validation
validator = { version = "0.18", features = ["derive"] }

# Environment Variables
dotenv = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-actix-web = "0.7"

# Error Handling
thiserror = "1"
anyhow = "1"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Crypto
sha2 = "0.10"

# Async Trait
async-trait = "0.1"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
