[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[[bin]]
name = "migration"
path = "src/main.rs"

[dependencies]
sea-orm-migration = "0.12"

[dependencies.sea-orm]
version = "0.12"
features = [
  "sqlx-postgres",
  "runtime-tokio-native-tls",
  "macros",
]
